@@ -8,6 +8,11 @@ gridToSVG <- function(name="Rplots.svg") {
   svgdev <- openSVGDev(name, width=par("din")[1], height=par("din")[2])
   # Create a gTree from the current page
   gTree <- grid.grab()
+  # Emptying the VP usage table
+  vpUsageTable <- data.frame(vpname = character(0),
+                             count = integer(0),
+                             stringsAsFactors=FALSE)
+  assign("vpUsageTable", vpUsageTable, env = .gridSVGEnv)
   # Convert gTree to SVG
   gridToDev(gTree, svgdev)
   devClose(svgdev)
